[package]
name = "piston-start"
version = "0.0.0"
authors = ["bvssvni <bvssvni@gmail.com>"]
keywords = []

[[bin]]
name = "sprite"
path = "src/sprite.rs"

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"

piston_window = "0.107.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.31.0"
piston2d-sprite = "0.59.0"
image = "0.23.0"
piston2d-drag_controller = "0.29.0"
piston2d-deform_grid = "0.6.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.31.0"
shader_version = "0.6.0"
piston2d-graphics = "0.36.0"
rand = "0.7.3"
uuid = "0.6.5"
gfx_core = "0.9.2"